# pybind11-project-example

./: CMakeLists.txt  README.rst  pyproject.toml
cpp_library_bindings/_core/: cpp_library.cpp
include/cpp_library/: Foo.h
src/: CMakeLists.txt
